[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tentacletk"
dynamic = ["version", "readme"]
description = "A multi-application marking menu and UI framework for Maya, 3ds Max, and Blender."
authors = [{name = "Ryan Simpson", email = "m3trik@outlook.com"}]
license = {text = "LGPL-3.0-or-later"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

# Dependencies - exclude optional system deps (Pillow, qtpy, numpy, shiboken6)
dependencies = [
    "pythontk>=0.8.86",
    "uitk>=1.3.15",
    "mayatk>=0.12.87",
    "blendertk>=0.5.9",
]

[project.urls]
Homepage = "https://github.com/m3trik/tentacle"
Repository = "https://github.com/m3trik/tentacle"

# extapps is an OPTIONAL, runtime-discovered provider of the content-pipeline
# panels (compositor, photogrammetry, texture/mesh tools) — deliberately NOT a
# pip dependency. It sits outside the ecosystem release chain
# (pythontk -> uitk -> mayatk -> tentacle) that push.ps1 dep-syncs/cascades, so
# a hard pin here would escape that tooling (and transitively drag in unitytk,
# which is likewise off-chain). Instead the panels self-describe via entry
# points and are auto-registered by uitk's ExternalAppHandler whenever extapps
# is present in the host env. The provider entry below is *runtime metadata
# only* (not a build-time pin — invisible to push.ps1): it lets the handler
# install-on-demand on a standalone host, or self-heal, if extapps is absent.
[project.entry-points."uitk.external_app_providers"]
extapps = "extapps"

[tool.setuptools.dynamic]
version = {attr = "tentacle.__version__"}
readme = {file = "docs/README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
include = ["tentacle*"]

[tool.setuptools.package-data]
"*" = ["*.ui", "*.json", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--ignore=test/temp_tests"
